syntax = "proto3";

option go_package = "pb";

import "google/protobuf/timestamp.proto";

message Cliente {
    string id = 1;
    string cliente = 2;
    string cuit = 3;
    string direccion = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6; 
}

message ClienteId {
    string id = 1;
}

service ClienteService {
    rpc GetCliente (ClienteId) returns (Cliente) {};
}