syntax="proto3";

option go_package = "pb";

import "google/protobuf/timestamp.proto";
import "producto.proto";
import "users.proto";

message Subasta {
    string id = 1;
    string fecha = 2;
    bool activo = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message SubastaProducto {
    string id = 1;
    Subasta subasta = 2; // subastas_id
    Producto producto = 3; // productos_id
    bool activo = 4;
    float oferta_final = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    string subastas_ofertas_id_winner = 8;
}

message SubastaOferta {
    SubastaProducto subasta_producto = 1; // subastas_productos_id
    float oferta_precio = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
    User user = 5;
}

message SubastaId {
    string id = 1;
}

service SubastaService {
    rpc GetSubasta(SubastaId) returns (Subasta) {};
}